[package]
name = "connect2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
dotenv = "0.15"
google-cloud-auth = { version = "0.9.2", path = "../../../Cache/google-cloud-rust/foundation/auth" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
